# engineering_principles

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI_REFERENCE.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  USAGE.md  eval_config.yaml  eval_runner.py  evaluation_checklist.md  install.sh  leap_mcp_server.py  principles_cli.py  pyproject.toml  pyrightconfig.json  streamlined_test_results.txt
.github/: CONTRIBUTORS.md
.github/workflows/: ci.yml
core/: enforcement.yaml  platforms.yaml  principles.yaml
docs/: ARCHITECTURE.md  CHANGELOG.md  CLI_REFERENCE.md  CONTRIBUTING.md  EVALUATION_METRICS.md  INTEGRATIONS.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  architecture.md  evaluation-metrics.md  evolution.md  loom_script.md  research.md  roadmap.md
docs/evaluation/: evaluation_checklist.md
docs/examples/: README.md  prompt_standard.md
docs/prompt_evaluation/: README.md  prompt_bananas.md
evals/detection/: accessibility_test_cases.yaml  architecture_test_cases.yaml  security_test_cases.yaml  testing_test_cases.yaml
evals/generation/: ui_component_challenges.yaml
leap/: __init__.py  filters.py  loaders.py  prompt_enhancer.py
leap/core/: enforcement.yaml  philosophy.yaml  platforms.yaml
leap/evals/detection/: accessibility_test_cases.yaml  architecture_test_cases.yaml  testing_test_cases.yaml
leap/evals/generation/: ui_component_challenges.yaml
leap/modules/detection/: context.yaml
leap/modules/detection/rules/: accessibility.yaml  architecture.yaml  code_quality.yaml  security.yaml
leap/modules/generation/: guidance.yaml
modules/detection/: context.yaml  severity.yaml
modules/detection/rules/: accessibility.yaml  testing.yaml
modules/generation/: guidance.yaml
tests/: test_eval_runner.py  test_principles_cli.py
